--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
     <title>Колоризация чернобелых фото</title>
   </head>
   <body>
-    <h1 class="alert alert-success" role="alert">Колоризация чернобелых фото</h1>
-<hr>
+    <header>
+      <div class="header_center"><h1 class="alert alert-success" role="alert">Колоризация чернобелых фото</h1></div>
+  <hr>
+</header>
+
 	<div><img class="black" src="img/lion.jpg"></div>
-	<div class="color-btn-div"><button type="button" class="btn btn-primary" onclick="color()"><span class="color-btn">Раскрасить</span></button></div>
+	<div class="color-btn-div"><button type="button" class="btn btn-primary btn-lg btn-block" onclick="color()"><span class="color-btn">Раскрасить</span></button></div>
 	<div><img class="color-photo" src="https://algorithmia.com/v1/data/.algo/deeplearning/ColorfulImageColorization/temp/lion.png" alt=""> <!-- Цветное фото, которое должно получится, адрес писать вручную -->
 	</div>
     <!-- Optional JavaScript -->
